@@ -4,8 +4,6 @@
 <head>
   <meta name="generator" content=
   "HTML Tidy for HTML5 for Linux version 5.2.0">
-  <meta name="generator" content="Bluefish 2.2.9">
-  <meta name="generator" content="Bluefish 2.2.9">
   <meta content="text/html; charset=utf-8" http-equiv=
   "Content-Type">
 
@@ -16,7 +14,7 @@
   "Documenting usage of Ublu which is an extensible object-disoriented interpretive language for midrange and mainframe remote system programming"
   name="description">
   <meta http-equiv="Last-Modified" content=
-  "Tue, 17 Apr 2018 17:24:42 UTC">
+  "Sun, 24 Jun 2018 03:31:08 UTC">
   <meta http-equiv="content-type" content=
   "text/html; charset=utf-8">
   <link rel="stylesheet" type="text/css" href="ublujedit.css">
@@ -64,7 +62,7 @@
 
   <p>Author: Jack J. Woehr<br>
   Original date: 2013-07-11<br>
-  Last edit: 2018-04-17</p>
+  Last edit: 2018-06-24</p>
 
   <pre>
  Copyright (c) 2015, Absolute Performance, Inc.
@@ -16993,6 +16991,10 @@ exit <span class="syntax-KEYWORD2">$?</span>
 
     <p><strong>See also</strong>: <a href="#splfol">splfol</a>
     <a href="#spoolflist">spoolflist</a></p>
+
+
+    <p>There are extensions for getting attributes in
+    <code>extensions/ux.printobj.ublu</code>.</p>
 
 
     <p><em>Example</em><br>
