@@ -18,8 +18,11 @@ All rights reserved.
         * rendering
 * Extensions
     * ux.string.ublu
+    * ux.printobj.ublu
+        * extended with functions for spooled files
 *Miscellaneous
     * Cleanup README.md
+    * More work on docs
 
 1.1.9 2017-12-12
 -----
